# epm

./: CUSTOMIZE.md  Cargo.toml  README.md  eps.toml  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
src/: client.rs  credentials.rs  installed.rs  main.rs  models.rs  update_check.rs
src/commands/: adopt.rs  info.rs  init.rs  install.rs  list.rs  login.rs  mcp.rs  mod.rs  new.rs  open.rs  publish.rs  runtime.rs  search.rs  self_uninstall.rs  self_update.rs  skills.rs  sync.rs  sysdeps.rs  uninstall.rs  upgrade.rs
src/commands/services/: audit.rs  install_startup.rs  logs.rs  mod.rs  observatory.rs  prune.rs  ps.rs  remove.rs  restart.rs  serve.rs  start.rs  startup.rs  stop.rs  sync.rs
src/services/: mod.rs  state.rs  tailscale.rs
tests/: adopt_test.rs  info_test.rs  init_test.rs  install_test.rs  list_test.rs  login_test.rs  mcp_test.rs  new_test.rs  open_test.rs  publish_test.rs  search_test.rs  self_uninstall_test.rs  sync_test.rs  uninstall_test.rs  upgrade_test.rs
tests/common/: mod.rs
